--- a/skeleton/assets/box_model.css
+++ b/skeleton/assets/box_model.css
@@ -4,6 +4,9 @@ body {
   /* If the user cannot load the Arial font, the sans-serif font is used */
   font-family: Arial, sans-serif;
   background-color: #FEFFF1;
+  width: 900px;
+  margin: 0 auto;
+  display: ;
 }
 
 h1 {
@@ -19,7 +22,11 @@ are children of an Unordered Lsit element */
 ul li a, figcaption a {
   text-decoration: none;
   color: inherit;
+  display: inline-block;
+  padding: 20px;
+  vertical-align: text-top;
 }
+
 
 /* This selector selects only IMMEDIATE (1 level deep) image element children
 of the header element */
@@ -29,13 +36,20 @@ header > img {
 
 /* Selects all elements with the class attribute "ingredients-list" */
 .ingredients-list {
-
+  margin-top: 15px;
+  margin-bottom: 15px;
   /* The list style property is shorthand for multiple list-style properties*/
   list-style: square inside;
 }
 
 ol {
   list-style: upper-roman inside;
+
+}
+
+ol li:nth-of-type(2n) {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .user_review h4 {
@@ -72,3 +86,13 @@ h2 + .user_review {
     border-top: 1px solid black;
 }
 
+section {
+  width: 700px;
+
+}
+
+aside {
+  width: 180px;
+  display:  section;
+  margin-right: 15px;
+}
